infra/k8s/despachos-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: despachos-deployment
  namespace: app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: despachos
  template:
    metadata:
      labels:
        app: despachos
    spec:
      containers:
      - name: despachos
        image: 348374603543.dkr.ecr.us-east-1.amazonaws.com/prueba_devops_2-despachos-back:latest
        ports:
        - containerPort: 8080
