infra/k8s/ventas-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ventas-deployment
  namespace: app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: ventas
  template:
    metadata:
      labels:
        app: ventas
    spec:
      containers:
      - name: ventas
        image: 348374603543.dkr.ecr.us-east-1.amazonaws.com/prueba_devops_2-ventas-back:latest
        ports:
        - containerPort: 8080
