infra/k8s/despachos-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: despachos-service
  namespace: app
spec:
  selector:
    app: despachos
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
  type: ClusterIP
